[package]
name = "cargo-sandbox"
authors = ["Colin O'Brien <insanitybit@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = """
`cargo-sandbox` is a near drop-in replacement for `cargo` that runs commands in a sandboxed environment.
"""
documentation = "https://github.com/insanitybit/cargo-sandbox"
keywords = ["cargo", "sandbox"]
categories = ["command-line-utilities"]

[dependencies]
eyre = "0.6.8"
futures = "0.3.25"
hyper = { version = "0.14.20", features = ["client", "stream", "tcp", "full"] }
maplit = "1.0.2"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
serde_url_params = "0.2.1"
thiserror = "1.0.38"
tokio = { version = "1.21.2", features = ["macros", "net", "full"] }
users = "0.11.0"
